# lvgl_port_win-linux_vscode

./: README.md
1-SDL2_lib_test_show/: CMakeLists.txt  main.cpp
2-lvgl_sim_vscode_sdl_win_show/: CMakeLists.txt  lv_demo_conf.h  main.c  说明.txt
2-lvgl_sim_vscode_sdl_win_show/lv_examples/src/lv_demo_widgets/: lv_demo_widgets.c
2-lvgl_sim_vscode_sdl_win_show/lvgl/: CMakeLists.txt
lvgl_squareLine_proj_temp/: CMakeLists.txt  win下加入sdl2库说明.txt  特性和使用说明.txt
lvgl_squareLine_proj_temp/3rdpart/lvgl/lv_drivers/: CMakeLists.txt  win_drv.c
lvgl_squareLine_proj_temp/3rdpart/lvgl/lv_drivers/sdl/: sdl.c
lvgl_squareLine_proj_temp/App/: CMakeLists.txt  app_temp.cpp  app_temp.h
lvgl_squareLine_proj_temp/AppUI/: CMakeLists.txt  all_event_cb_fun.h  lv_proj_hal_init.cpp  lv_proj_hal_init.h  main_page.cpp  main_page.h
lvgl_squareLine_proj_temp/AppUI/trans/: de.yaml  es.yaml  fr.yaml  it.yaml  ja.yaml  lv_i18n.c  nl.yaml  sv.yaml  zh-Hans-CN.yaml  zh-Hant-TW.yaml
lvgl_squareLine_proj_temp/AppUI/ui/: CMakeLists.txt  ui.c  ui.h  ui_events.c  ui_helpers.c  ui_helpers.h
lvgl_squareLine_proj_temp/AppUI/ui/components/: ui_comp.c  ui_comp_hook.h  ui_comp_switchformated.h
lvgl_squareLine_proj_temp/AppUI/ui/screens/: ui_Screen1.c
lvgl_squareLine_proj_temp/proj_conf/: lv_conf.h  lv_drv_conf.h  proj_conf.h
lvgl_squareLine_proj_temp/proj_main/: main.cpp  main.h
lvgl_squareLine_proj_temp/proj_utils/: CMakeLists.txt
lvgl_squareLine_proj_temp/screen/: lv_conf.h  lv_drv_conf.h  main.c
lvgl_squareLine_proj_temp/screen/lv_drivers/: win_drv.c  win_drv.h
lvgl_squareLine_proj_temp/screen/lv_drivers/sdl/: sdl.c
lvgl_squareLine_proj_temp/screen/lv_drivers/win32drv/: win32drv.c
lvgl_squareLine_proj_temp/screen/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h
lvgl_squareLine_proj_temp/screen/ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_switchformated.c
lvgl_squareLine_proj_temp/screen/ui/screens/: ui_Screen1.c
lvgl_squareLine_proj_temp/screen/ui_0/: ui_events.h  ui_helpers.c  ui_helpers.h
lvgl_squareLine_proj_temp/squareLine_proj/: gen_vscode_proj.sll  gen_vscode_proj.spj
lvgl_squareLine_proj_temp/squareLine_proj/gen_vscode_proj/: CMakeLists.txt  lv_conf.h  lv_drv_conf.h
lvgl_squareLine_proj_temp/squareLine_proj/gen_vscode_proj/ui/: ui.h
lvgl_squareLine_proj_temp/squareLine_proj/gen_vscode_proj/ui/screens/: ui_Screen1.c
lvgl_squareLine_proj_temp/tools/: lv_i18n_compileYaml2Src.bat  lv_i18n_extractTrans2yaml.bat  lv_i18n多语言使用.md  win下加入sdl2库说明.md
lvgl_squareLine_proj_temp/utils/: CMakeLists.txt  demosAndExamples.c  demosAndExamples.h  lv_demosAndExamples.c  lv_demosAndExamples.h  lv_proj_hal_init.c  lv_proj_hal_init.h  periodic_running_basic.c  periodic_running_basic.h  win_hal_init.c  win_hal_init.h
